--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.72.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-redux": "^8.1.2"
+    "react-redux": "^8.1.2",
+    "@stripe/stripe-react-native": "0.28.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
